--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.2",
     "multer-gridfs-storage": "^5.0.2"
-  }
+  },
+  "scripts": {
+  "start": "node loginRegister.js"
+}
   
 }
