--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "multer-gridfs-storage": "^5.0.2"
   },
   "scripts": {
-  "start": "node loginRegister.js"
+  "start": "node js/loginRegister.js"
 }
   
 }
